--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
     display: flex; 
     justify-content: space-between; 
     width: 100%;
-    padding: 1rem; 
+    padding: 1rem 2rem; 
 
     position:fixed ;
     top:0;
@@ -10,7 +10,8 @@
     right:0;
     z-index: 1000;
 
-    background-color: rgb(197, 195, 195);
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 #logo-container {
@@ -34,18 +35,19 @@
 
 #search-bar {
     width: 100%;
+    
 
-    padding: 0.5rem 0.25rem;
+    padding: 0.5rem 1rem;
 
-    border: none;
-    border-radius: 0.75rem;
+    border: 1px solid #ddd;
+    border-radius: 2rem;
 }
 
 .search-icon {
     position: absolute; 
     right: 1rem;
 
-    color: rgb(15, 14, 14);
+    color: #007bff;
     
     cursor: pointer;
 }
